add monitoring endpoint, update readme, add plot (very ugly -> fix!!)
